--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,7 +6,7 @@ Fixes:
 - Scripterror beim Aufrufen der RX-Echo Einstellungen und aktivierten Dual-Port
 - '*** connected to ' und '*** reconnected to ', erkennt calls unvollständig wenn '*** ...' Nachricht in mehreren
   Frames gesendet wird (Es wurden nicht nach vollständigen Zeilen ausgewertet).
-- AXIP-Adresse wird bei neuen Connect aus User-DB bezogen wenn kein AXIP Eintrag in MH-Liste vorhanden
+- AXIP-Adresse wird bei neuen Connect nicht aus der User-DB bezogen wenn kein AXIP Eintrag in MH-Liste vorhanden
 - MH-Liste automatische Erfassung von DIGIs/Noden im Connect-Pfad
 
 Optimierung:
