- 2'nd "tabbed SideFrame" in mainGUI

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -19,6 +19,7 @@ Neue Implementierungen / Funktionen:
 - Tracer Fenster Menüleiste > Alle Daten löschen
 - CLI/Remote Kommandos für bestehende Verbindung können jetzt deaktiviert werden
 - Grafische MH-Listen/Routen Auswertung (Netzwerk-Graf)
+- 2. Seitenfenster Tabelle (Kanal/Global/MH/Tracer/...)
 
 ###########################################################################################################
 ###########################################################################################################
