- opt: ax25Frame add get_frame_conf() - opt: MH/Statistic input changed to ax25Frame-Conf

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,13 @@
 ###########################################################################################################
+# 2.107.x
+Fixes:
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.106.x
 Fixes:
 - Bandauslastung Graph wird in Windows nicht richtig dargestellt aufgrund Seitenverhältnis zum "Side-Frame"
