--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,10 +2,13 @@
 # 2.107.x
 Fixes:
 - Scripterror nach Auslösen des "bell" Befehls und Disconnect der jeweiligen Station
+- Programm hängt, wenn Monitor viele Daten (Dateiübertragung via AXIP) ausgeben muss
+- Monitor hat teilweise falsche Daten ausgegeben, wenn Daten von anderem Task weiterverarbeitet wurden (C-Bit/Digi-Flag, ...)
 
 Optimierung:
 - AX25Frame get Frame Parameters
 - MH/Statistic Input geändert auf neue AX25Frame Parameter
+- Monitortask (Es empfiehlt sich den Monitor bei der Dateiübertragung via AXIP auf den jeweiligen Port abzuschalten)
 
 Neue Implementierungen / Funktionen:
 
