--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -14,6 +14,7 @@ Neue Implementierungen / Funktionen:
 - "Managed-Digi/Smart-Digi/L3-Digi" Digi übernimmt Flusskontrolle anstatt alle Frames "Dumm" zu digipeaten.
   - Via Pfad wird gekürzt *optional
   - Pfad & Port wird automatisch aus der MH-Liste bezogen wenn bekannt
+  - RNR wird gesetzt, wenn Digi-Buffer eine bestimmte Größe erreicht hat oder N2 > 5
 ###########################################################################################################
 ###########################################################################################################
 # 2.106.x
