--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,10 +1,12 @@
 ###########################################################################################################
 # 2.108.x
 Fixes:
-- UmgebungsVARS in Quit-Text funktionieren nicht
+- UmgebungVARS in Quit-Text funktionieren nicht
 - UI-Frames werden nicht mehr digipited
+- Im Monitor Modus wird ein neu ausgehender Connect auf Kanal 0 gelegt.
 
 Optimierung:
+- Dev Konsolenausgaben aufgeräumt
 
 Neue Implementierungen / Funktionen:
 - UmgebungVARS für C-Text/Bye-Text/Info-Text/LangInfo/News/Bake
