--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,17 @@
 ###########################################################################################################
+# 2.109.x
+Fixes:
+- Wenn Station CLI-Typ als Pipe gesetzt ist, ist es nicht mehr möglich einen anderen CLI-Typ auszuwählen
+- Wenn keine Distanz bekannt wird "-1 km" in der unteren Statusleiste angezeigt
+
+Optimierung:
+- Teile der alten Configs in neues System übertragen
+
+Neue Implementierungen / Funktionen:
+- weitere Übersetzungen
+
+###########################################################################################################
+###########################################################################################################
 # 2.108.x
 Fixes:
 - UmgebungVARS in Quit-Text funktionieren nicht
@@ -29,7 +42,7 @@ Optimierung:
   z.B. um aktuelle Wetterdaten o.Ä. einzufügen.
 - ax25guiPortSettings.py einige Übersetzungen vervollständigt und Variablen Optimirungen
 - Erweiterte Error Log Ausgabe für ax25dec Call-Validator
-- string_tab / Holländische Übersetzung - Thanks to NL5VKL for the Dutch translation.
+- string_tab / Holländische Übersetzung - Thanks to NL1NOD for the Dutch translation.
 
 Neue Implementierungen / Funktionen:
 - UmgebungVARS für C-Text/Bye-Text/Info-Text/LangInfo/News/Bake
