--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,6 +7,7 @@ Fixes:
 Optimierung:
 - Teile der alten Configs in neues System übertragen
 - Pipe-Tool teilweise überarbeitet
+- Error Logs/Log Config/Logger import
 
 Neue Implementierungen / Funktionen:
 - weitere Übersetzungen
