--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,7 @@ Optimierung:
 - Teile der alten Configs in neues System übertragen
 - Pipe-Tool teilweise überarbeitet
 - Error Logs/Log Config/Logger import
+- AX25Device Error-handling/logging
 
 Neue Implementierungen / Funktionen:
 - weitere Übersetzungen
