--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,6 +4,7 @@ Fixes:
 - Wenn Station CLI-Typ als Pipe gesetzt ist, ist es nicht mehr möglich einen anderen CLI-Typ auszuwählen
 - Wenn keine Distanz bekannt wird "-1 km" in der unteren Statusleiste angezeigt
 - Kanal/Connection Parameter T2Auto wurde nicht korrekt gesetzt
+- Textfarben im QSO Fenster ändern sich sporadisch für einige Zeilen (rot auf schwarz)
 
 Optimierung:
 - Alten Configs in neues System übertragen
