- MCast Part 5 ?? Add CLI-CMD - MCast: Add CLI-CMD CHLIST & CHINFO

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -10,9 +10,13 @@ Fixes:
 Optimierung:
 - Error/popt-Log.
 - Logs werden jetzt im Ordner data/logs gespeichert.
+- Multicast(MCast) überarbeitet
 
 Neue Implementierungen / Funktionen:
 - Simples Logbuch. Monatlich wir eine neue Datei geschrieben, um Verbindungen zu erfassen.
+- Multicast-Server (MCast-Server)
+- MCast CLI
+- MCast virtuelle Kanäle
 
 ###########################################################################################################
 ###########################################################################################################
