--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -16,6 +16,9 @@ Neue Implementierungen / Funktionen:
 - Simples Logbuch. Monatlich wir eine neue Datei geschrieben, um Verbindungen zu erfassen.
 - Multicast-Server (MCast-Server)
 - MCast CLI
+- MCast CLI-CMD: CH - Kanal wechseln
+- MCast CLI-CMD: CHLIST - Liste der Kanäle
+- MCast CLI-CMD: CHINFO - Informationen des aktuellen Kanals
 - MCast virtuelle Kanäle
 
 ###########################################################################################################
