- MCast loop preventer

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,14 @@
 ###########################################################################################################
+# 2.111.x
+Fixes:
+
+Optimierung:
+- MCast Loop-Preventer
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.110.x
 Fixes:
 - Inkorrektes Handling, wenn DM Frame (Connection Reset) empfangen wird. Verursacht FRMR
