- fix: Script Error cliMA str_cmd_req_name()

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,6 +1,7 @@
 ###########################################################################################################
 # 2.111.x
 Fixes:
+- Scripterror wenn Stations Name angefordert wird.
 
 Optimierung:
 - MCast Loop-Preventer
