- fix: MCast Channel settings weren't properly updated.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -4,6 +4,7 @@ Fixes:
 - Scripterror wenn Stations Name angefordert wird.
 - Es wurden nicht alle MCast-Mitglieder in der CLI & GUI angezeigt
 - MCast Mitglieder mit selben IP u Port bekommen doppelte Frames
+- MCast Settings Fenster: Kanal-Mitglied Liest wurde nicht ordentlich geupdated
 
 Optimierung:
 
