- add: MCast: Beacon when Member enters/leave the Channel

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -10,6 +10,7 @@ Optimierung:
 
 Neue Implementierungen / Funktionen:
 - MCast Loop-Preventer
+- MCast: Bake an Kanalmitglieder wenn Mitglied den Kanal betritt/verlässt
 
 ###########################################################################################################
 ###########################################################################################################
