- New MainGUI Part2: Digisettings fix

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,8 @@ Fixes:
 - Baken-Text von Datei: falscher Zeilenumbruch
 
 Optimierung:
+- Alle wichtigen Einstellungen zusammengefasst in ein Fenster
+- Kein Disconnect mehr nötig bei Änderung der Station Einstellungen
 
 Neue Implementierungen / Funktionen:
 - MCast Loop-Preventer
