- fix: APRS Run-Setting wasn't saved

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,6 +6,7 @@ Fixes:
 - MCast Mitglieder mit selben IP u Port bekommen doppelte Frames
 - MCast Settings Fenster: Kanal-Mitglied Liest wurde nicht ordentlich geupdated
 - Baken-Text von Datei: falscher Zeilenumbruch
+- APRS-Einstellungen werden nicht gespeichert bzw. APRS-Run Option
 
 Optimierung:
 - Alle wichtigen Einstellungen zusammengefasst in ein Fenster
