--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -18,6 +18,7 @@ Neue Implementierungen / Funktionen:
 - Zeilenumbruch bei 79 Zeichen im Vorschreibfenster/Monitor
 - Zeilenumbruch bei 79 Zeichen für PMS Nachrichten
 - Zeilenumbruch bei 79 Zeichen für Baken texte
+- Zeilenumbruch bei 79 Zeichen für Stations-Texte (C-Text usw.)
 
 ###########################################################################################################
 ###########################################################################################################
