--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -22,7 +22,8 @@ Neue Implementierungen / Funktionen:
 - Zeilenumbruch bei 79 Zeichen für PMS Nachrichten
 - Zeilenumbruch bei 79 Zeichen für Baken texte
 - Zeilenumbruch bei 79 Zeichen für Stations-Texte (C-Text usw.)
-- Allgemeine Einstellung: Farbe des Vorschreibfensters einstellbar (endlich)
+- Allgemeine Einstellung: Sprache einstellbar (endlich). Neustart von PoPT erforderlich.
+- Allgemeine Einstellung: Farbe des Vorschreibfensters einstellbar (endlich).
 
 ###########################################################################################################
 ###########################################################################################################
