- fix: Scripterror when "Disco all Station" messagebox

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,14 @@
 ###########################################################################################################
+# 2.112.x
+Fixes:
+- Scripterror (Crash) wenn "Alle Disconecten" Messagebox angezeigt wird
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.111.x
 Fixes:
 - Scripterror, wenn Stationsname angefordert wird.
