- F-Text (Macro Text) Shift+F1 - F12

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -16,6 +16,7 @@ Optimierung:
 - Port-Config Initialisierung
 
 Neue Implementierungen / Funktionen:
+- F-Texte (Shift F1 - F10) belegbar mit "Macro-Texten"
 
 ###########################################################################################################
 ###########################################################################################################
