Fixes: - Windows: Keybindings für F-Texte

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,14 @@
 ###########################################################################################################
+# 2.113.x
+Fixes:
+- Windows: Keybindings für F-Texte
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.112.x
 Fixes:
 - Scripterror (Crash) wenn "Alle Disconnecten" Messagebox angezeigt wird
